--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
       </div>
       <div class="modal-footer">
         <h6 id="total-carrito" class="total-carro"></h6>
+        <button id="limpiar-carro" class="limpiar-carrito"><i class="fa-solid fa-broom"></i>Limpiar carrito</button>
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
         <button type="button" class="btn btn-primary">Confirmar</button>
       </div>
