--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/7387f64802.js" crossorigin="anonymous"></script>
+  <link rel="icon" type="image/jpg" href="./img/favicon-32x32.png"/>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   <link rel="stylesheet" type="text/css" href="./stlye.css">
@@ -33,20 +34,27 @@
           <button type="button" class="boton-carrito" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <i class="fa-solid fa-cart-shopping carrito"></i> <span class="badge text-bg-secondary" id="cantidad-carrito">0</span>
           </button>
-          <!-- <button class="boton-carrito">
-            
-          </button> -->
         </div>
       </div>
     </div>
   </nav>
 
   <main>
-    <label>Elegir tipo de ingreso:</label>
-    <select id="tipo_ingreso">
-      <option value="Usuario">Usuario</option>
-      <option value="Administrador">Administrador</option>
-    </select>
+    <div class="filtros_container">
+      <label>Elegir tipo de ingreso:</label>
+      <select id="tipo_ingreso">
+        <option value="Usuario">Usuario</option>
+        <option value="Administrador">Administrador</option>
+      </select>
+      <label>Filtrar por marca:</label>
+      <select id="filtrar_marca">
+        <option value="All">All</option>
+        <option value="HyperX">HyperX</option>
+        <option value="Logitech">Logitech</option>
+        <option value="Razer">Razer</option>
+        <option value="Redragon">Redragon</option>
+      </select>
+    </div>
     <h3 class="cargar-producto">Cargar Producto:</h3>
     <form id="add-product-form" class="d-flex justify-content-center">
       <div class="mb-3 div-form">
@@ -68,14 +76,6 @@
       <input class="boton-enviar" type="submit" value="Cargar">
     </form>
 
-    <!-- <strong>Ingrese un producto:</strong>
-        <form id="add-product-form">
-            <input type="text" placeholder="Nombre" required>
-            <input type="number" placeholder="Precio" required>
-            <input type="number" placeholder="Stock" required>
-            <input type="text" placeholder="Image">
-            <input type="submit" value="Cargar">
-        </form> -->
     <hr>
 
     <h3 class="cargar-producto">Eliminar producto:</h3>
@@ -86,10 +86,7 @@
       </div>
       <input class="boton-enviar" type="submit" value="Borrar">
     </form>
-    <!-- <form id="deleted-product-form">
-            <input type="number" placeholder="Id" required>
-            <input type="submit" value="Borrar">
-        </form> -->
+    
     <hr>
 
     <div id="products-container" class="products-container"></div>
