--- a/index.html
+++ b/index.html
@@ -66,10 +66,6 @@
         <input type="text" class="form-control" required>
       </div>
       <div class="mb-3 div-form">
-        <label for="stock" class="form-label">Stock</label>
-        <input type="number" class="form-control" required>
-      </div>
-      <div class="mb-3 div-form">
         <label for="exampleInputPassword1" class="form-label">Image</label>
         <input type="text" class="form-control">
       </div>
@@ -108,7 +104,7 @@
         <h6 id="total-carrito" class="total-carro"></h6>
         <button id="limpiar-carro" class="limpiar-carrito"><i class="fa-solid fa-broom"></i>Limpiar carrito</button>
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary">Confirmar</button>
+        <button type="button" id="comprar-carrito" class="btn btn-primary">Confirmar</button>
       </div>
     </div>
   </div>
